# skills

./: .pre-commit-config.yaml  CONFIGURATION.md  Makefile  README.md  TODO.md  pyproject.toml
.brain/: architecture.md  consolidation-2026-06.md  determinism-doctrine.md  index.md  log.md  plugin-distribution.md  review-2026-07-01.md  second-brain-protocol.md  toolchain.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.work/: BACKLOG.md
hooks/: hooks.json  skill-router.sh
scripts/: git-commit.sh  install.sh
skills/cloud/aws-toolkit/: README.md  SKILL.md
skills/cloud/azure-toolkit/: README.md  SKILL.md
skills/cloud/cloud-best-practices/: README.md  SKILL.md
skills/cloud/gcp-toolkit/: README.md  SKILL.md
skills/cloud/soc-siem/: README.md  SKILL.md
skills/design/brandkit/: README.md  SKILL.md
skills/design/frontend-design/: README.md  SKILL.md
skills/documents/docx/: README.md  SKILL.md
skills/documents/pdf/: README.md  SKILL.md
skills/documents/pptx/: README.md  SKILL.md
skills/documents/xlsx/: README.md  SKILL.md
skills/engineering/agent-loop/: README.md  SKILL.md
skills/engineering/agent-orchestration/: README.md  SKILL.md
skills/engineering/app-completion-loop/: SKILL.md
skills/engineering/appsec/: README.md  SKILL.md
skills/engineering/tdd/: README.md  (+1 more)
tools/: run_readme.py  run_selftests.py  test_manifest_drift.py  test_run_selftests.py
tools/skill_config/: __main__.py  cli.py
tools/skill_cursor/: __init__.py  __main__.py  cli.py  core.py
tools/skill_gate/: core.py
tools/skill_lint/: core.py
tools/skill_new/: cli.py
tools/skill_readme/: __main__.py  cli.py  core.py
tools/skillkit/: config.py
(+153 files in other folders)
