[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ldatb-skills-tools"
version = "0.1.0"
description = "Deterministic toolchain for the ldatb/skills repository: skill-lint and skill-new."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lucas de Ataides", email = "lucasatab@gmail.com" }]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "semgrep>=1.80", "pre-commit>=3.5"]

[project.scripts]
skill-lint = "skill_lint.cli:main"
skill-new = "skill_new.cli:main"
skill-gate = "skill_gate.cli:main"
skill-changelog = "skill_changelog.cli:main"
skill-docs = "skill_docs.cli:main"
skill-update = "skill_update.cli:main"
skill-config = "skill_config.cli:main"
skill-readme = "skill_readme.cli:main"

[tool.setuptools.packages.find]
where = ["tools"]
include = ["skill_lint*", "skill_new*", "skill_gate*", "skill_changelog*", "skill_docs*", "skill_update*", "skill_config*", "skill_readme*", "skillkit*"]

[tool.setuptools.package-data]
skill_lint = ["rules.yaml"]
skill_new = ["templates/*"]
skill_gate = ["gates.yaml"]

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py"]
pythonpath = ["tools"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# Line width is owned by `ruff format`; E501 only fires on unwrappable string
# literals, where breaking the line hurts readability more than it helps.
ignore = ["E501"]
